--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,14 +8,14 @@
       <p class="mb-0">
         © {{ 'now' | date: "%Y" }}
         <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>.
-        {% if site.data.locales[lang].copyright.brief %}
+        <!-- {% if site.data.locales[lang].copyright.brief %}
         <span data-toggle="tooltip" data-placement="top"
           title="{{ site.data.locales[lang].copyright.verbose }}">{{ site.data.locales[lang].copyright.brief }}</span>
-        {% endif %}
+        {% endif %} -->
       </p>
     </div>
 
-    <div class="footer-right">
+    <!-- <div class="footer-right">
       <p class="mb-0">
         {% capture _platform %}
           <a href="https://jekyllrb.com" target="_blank" rel="noopener">Jekyll</a>
@@ -31,7 +31,7 @@
         }}
 
       </p>
-    </div>
+    </div> -->
 
   </div> <!-- div.d-flex -->
 </footer>
